Bug 776314 - Add a script flag indicating if the script is a generator expression. r=luke